# My_Project_Portfolio

./: README.md
AI program in NUS/: Group-6-Project.ipynb
in-class experiments/Experiments on Medical Image segmentation/liver/: README.md
internship/auto keystone correction projector with TOF/: CMakeLists.txt  TOFCorrection.cpp  calibrationTOF.cpp  calibration_demo.cpp  correction_demo.cpp  generalFunctions.cpp  slidingwindow.cpp  slidingwindow.h
internship/auto keystone correction projector with camera/cpp_implementation/: CMakeLists.txt  KeystoneCorrection.cpp  generalFunctions.cpp  main.cpp
internship/auto keystone correction projector with camera/cpp_implementation/calibration/: calibration.cpp
internship/auto keystone correction projector with camera/cpp_implementation/include/: KeystoneCorrection.h  generalFunctions.h
internship/auto keystone correction projector with camera/cpp_implementation/include/apriltag/: apriltag_pose.h
internship/auto keystone correction projector with camera/python_implementation/: correction.py
internship/auto keystone correction projector with camera/python_implementation/calibration_tools/: calibrate.py  calibration_result.xml  camera_config.json  graycode_imgs_generator.py
